# CLocksVM

./: .clangd  .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  build_proj  cmake_install.cmake  compile_commands.json  nob.c  nob.h  program.lox  run_build  run_build.old  test  test_nob.c
.cache/clangd/index/: bitsTricks.c.C2759A02E4FF06E6.idx  bitsTricks.h.611714E3862DF62B.idx  debug.c.1ED095F2F8062D91.idx  debug.h.0FA8D2ADD8CCF9A2.idx  loxCLI.c.0AF3C89C91D25AAE.idx  loxCLI.h.8008F0DE414BFE57.idx  loxChunk.c.3ACBFE22907201C9.idx  loxChunk.h.244721477217D27B.idx  loxCompiler.c.43B93850A423A130.idx  loxCompiler.h.CC6BC4C298E4D526.idx  loxErrors.c.E43A65CE0C387E47.idx  loxErrors.h.65FAD468C3B587B3.idx  loxLineTracker.c.A2FF7178E0A24F0F.idx  loxLineTracker.h.52621828944188A7.idx  loxMemory.c.A4F103FFCC6A76F2.idx  loxMemory.h.1EBB10639E309D66.idx  loxObject.c.0661C49007EF04FF.idx  loxObject.h.553DB112C47A158B.idx  loxParser.c.EECA0F43FB3015E7.idx  loxParser.h.EF0DC59CB50E95E3.idx  loxScanner.c.EF5C02DD197FA0B8.idx  loxScanner.h.A55937FAD70A80B5.idx  loxStack.c.AFA6B3FD53A5DAC2.idx  loxStack.h.699AA43910219671.idx  loxToken.c.CC9E0105B28D7F08.idx  loxToken.h.47280186BE6275DB.idx  loxVM.c.ED17758D535A1919.idx  loxVM.h.E65929D0BD7CAEF6.idx  loxValue.c.CEB780ED6B4D0F62.idx  loxValue.h.45D9F9E07971D36B.idx  loxValueArray.c.AB0B56CDB6D50C9E.idx  loxValueArray.h.9019219672F59396.idx  main.c.D28EDB432A09F054.idx  oneFileSTD.h.D2CBEA15114D3F6F.idx
.vim/: coc-settings.json
include/: chunk.h  debug.h  dynamicArray.h  lineTracker.h  loxCLI.h  loxChunk.h  loxCompiler.h  loxErrors.h  loxHashMap.h  loxLineTracker.h  loxMemory.h  loxObject.h  loxParser.h  loxScanner.h  loxStack.h  loxToken.h  loxVM.h  loxValue.h  loxValueArray.h  oneFileSTD.h  value.h
notes/: break
src/: bitsTricks.c  bitsTricks.h  chunk.c  debug.c  debug.h  lineTracker.c  loxCLI.c  loxCLI.h  loxChunk.c  loxChunk.h  loxCompiler.c  loxCompiler.h  loxErrors.c  loxErrors.h  loxHashMap.c  loxLineTracker.c  loxMemory.c  loxMemory.h  loxObject.c  loxObject.h  loxParser.c  loxParser.h  loxScanner.c  loxScanner.h  loxStack.c  loxStack.h  loxToken.c  loxToken.h  loxVM.c  loxVM.h  loxValue.c  loxValueArray.c  main.c  oneFileSTD.h  value.c
test/: hash_map_bench.c
tests/: hash_map_bench.c
